--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@adonisjs/auth": "^8.0.9",
     "@adonisjs/core": "^5.3.1",
     "@adonisjs/lucid": "^16.0.0",
+    "@adonisjs/mail": "^7.2.4",
     "@adonisjs/repl": "^3.1.6",
     "@adonisjs/session": "^6.1.2",
     "@adonisjs/shield": "^7.0.6",
